syntax = "proto3";

package logservice;

option go_package = "./proto;logservice";

service LogService {
    rpc WriteLog (WriteLogRequest) returns (LogReply) {}
}

message WriteLogRequest {
    string message = 1;
}

message LogReply {
    //状态码
    int32 code = 1;
    //错误信息
    string msg = 2;
}
